added the ability to edit posts in profiles.Now edited posts are marked "edited", the logic of sending to the server has been rewrote (old resource urls are now sent if they have not been changed)

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -132,4 +132,5 @@
     </string-array>
     <string name="who_can_text_me">Кто может писать мне</string>
     <string name="the_changes_have_been_applied">Изменения применены</string>
+    <string name="edited">ред.</string>
 </resources>
