--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,4 +137,5 @@
         <item>Subscriptions_only</item>
         <item>Nobody</item>
     </string-array>
+    <string name="edited">edited</string>
 </resources>
