added an active chat connection via websocket, and now the message list is loaded from the server when it crashes - from the cache,incorrect message image has been fixed

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -127,11 +127,12 @@
     <string name="blackList_info">Вы были добавлены в чёрный список!</string>
     <string-array name="message_mode" translatable="true">
         <item>Все</item>
-        <item>Только подписчики</item>
+        <item>Только подписки</item>
         <item>Никто</item>
     </string-array>
     <string name="who_can_text_me">Кто может писать мне</string>
     <string name="the_changes_have_been_applied">Изменения применены</string>
     <string name="edited">ред.</string>
     <string name="empty_content">У пользователя пока нет публикаций</string>
+    <string name="loaded_from_cache">Загружено из кэша</string>
 </resources>
