--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,4 +139,6 @@
     </string-array>
     <string name="edited">edited</string>
     <string name="empty_content">The user has no publications yet</string>
+    <string name="loaded_from_cache"> loaded from cache</string>
+
 </resources>
