Added a subscription to web socket topics (recent chats and statuses about viewed messages).User response now returns the online and confirmed markers, which are processed by the RecyclerView adapter.When logging into the MessageActivity.kt system, information about reading messages is sent to the server, and the same thing happens in real time.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -135,4 +135,5 @@
     <string name="edited">ред.</string>
     <string name="empty_content">У пользователя пока нет публикаций</string>
     <string name="loaded_from_cache">Загружено из кэша</string>
+    <string name="new_">новый</string>
 </resources>
