--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,5 +140,6 @@
     <string name="edited">edited</string>
     <string name="empty_content">The user has no publications yet</string>
     <string name="loaded_from_cache"> loaded from cache</string>
+    <string name="new_"> new</string>
 
 </resources>
