--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -94,7 +94,7 @@
     <string name="create">Создать</string>
     <string name="add_participants">Добавьте участников</string>
     <string name="empty_field">Поле не может быть пустым</string>
-    <string name="chat_members">Участники чата</string>
+    <string name="group_members">Участники группы</string>
     <string name="members">участника</string>
     <string name="create_channel">Создать канал</string>
     <string name="description">Описание</string>
@@ -136,4 +136,5 @@
     <string name="empty_content">У пользователя пока нет публикаций</string>
     <string name="loaded_from_cache">Загружено из кэша</string>
     <string name="new_">новый</string>
+    <string name="group">Группа</string>
 </resources>
