--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -66,7 +66,7 @@
     <string name="wrong_password">Неверный пароль</string>
     <string name="new_post">Новый пост</string>
     <string name="publish">Опубликовать</string>
-    <string name="edit">Редактировать</string>
+    <string name="edit">Ред.</string>
     <string name="empty_message">Пока ничего нет. \nДобавьте что-нибудь интересное!</string>
     <string name="yes">Да</string>
     <string name="no">Нет</string>
@@ -137,4 +137,6 @@
     <string name="loaded_from_cache">Загружено из кэша</string>
     <string name="new_">новый</string>
     <string name="group">Группа</string>
+    <string name="channel_management">Управление каналом</string>
+    <string name="reset_poll_info">После редактирования поста результаты опроса будут сброшены!</string>
 </resources>
