The ability to upload and leave comments in channels has been added. Additionally, a button for rating posts and removing existing ratings has been implemented.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -139,4 +139,5 @@
     <string name="group">Группа</string>
     <string name="channel_management">Управление каналом</string>
     <string name="reset_poll_info">После редактирования поста результаты опроса будут сброшены!</string>
+    <string name="your_evaluation">Ваша оценка:</string>
 </resources>
