--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,4 +144,5 @@
     <string name="group">Group</string>
     <string name="channel_management">Channel management</string>
     <string name="reset_poll_info">After editing the post, the poll results will be reset!</string>
+    <string name="your_evaluation">Your evaluation:</string>
 </resources>
