implemented downloading and viewing posts with filtering by channels and subscriptions via Chips

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -143,4 +143,5 @@
     <string name="delete_message_title">Удаление сообщения</string>
     <string name="delete_message_confirm_text">Вы уверены, что хотите удалить сообщение?</string>
     <string name="share">Поделиться</string>
+    <string name="users">Пользователи</string>
 </resources>
