--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,4 +148,7 @@
     <string name="delete_message_title">Deleting a message</string>
     <string name="delete_message_confirm_text">Are you sure you want to delete the message?</string>
     <string name="share">Share</string>
+    <string name="users">Users</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
