--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -149,6 +149,6 @@
     <string name="delete_message_confirm_text">Are you sure you want to delete the message?</string>
     <string name="share">Share</string>
     <string name="users">Users</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="delete_comment_title">Deleting a comment</string>
+    <string name="delete_comment_confirm_text">Are you sure you want to delete the comment?</string>
 </resources>
