A subscription to statuses has been added to chats (prints, records voice, and so on), errors and shortcomings have been fixed.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -146,4 +146,7 @@
     <string name="users">Пользователи</string>
     <string name="delete_comment_title">Удаление комментария</string>
     <string name="delete_comment_confirm_text">Вы уверены, что хотите удалить комментарий?</string>
+    <string name="writes">печатает</string>
+    <string name="recording_voice">записывает голосовое сообщение</string>
+    <string name="select_image">выбирает изображение</string>
 </resources>
