--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -151,4 +151,7 @@
     <string name="users">Users</string>
     <string name="delete_comment_title">Deleting a comment</string>
     <string name="delete_comment_confirm_text">Are you sure you want to delete the comment?</string>
+    <string name="writes">writes</string>
+    <string name="recording_voice">recording a voice message</string>
+    <string name="select_image">selects an image</string>
 </resources>
