fixed: the icons of the confirmed and closed channels were overlapping each other.When changing the password in the settings, new tokens are now returned from the server.Added processing of blocked users and channels (a window is displayed)

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -149,4 +149,7 @@
     <string name="writes">печатает</string>
     <string name="recording_voice">записывает голосовое сообщение</string>
     <string name="select_image">выбирает изображение</string>
+    <string name="blocked_info">Вы заблокированы</string>
+    <string name="outsider_blocked_info">Пользователь был заблокирован за нарушение правил</string>
+    <string name="channel_blocked">Канал был заблокирован за нарушение правил</string>
 </resources>
