A display of verified accounts has been added to the users and channels page, and the latest online  is also displayed.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -159,4 +159,6 @@
     <string name="addMembers">Добавить участников</string>
     <string name="invite">Пригласить</string>
     <string name="evalutions">Оценки</string>
+    <string name="online">онлайн</string>
+    <string name="was_online">был в сети</string>
 </resources>
