A checkbox with a link to the privacy policy has been added to the registration fragment, which opens within the app in a WebView. Access to the privacy policy is also available in the settings.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -161,4 +161,7 @@
     <string name="evalutions">Оценки</string>
     <string name="online">онлайн</string>
     <string name="was_online">был в сети</string>
+    <string name="accept_privacy_policy">Я ознакомился и принимаю</string>
+    <string name="privacy_policy">политику конфиденциальности</string>
+    <string name="privacyPolicy"><u/>Политика конфиденциальности<u/></string>
 </resources>
