--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -161,7 +161,7 @@
     <string name="evalutions">Оценки</string>
     <string name="online">онлайн</string>
     <string name="was_online">был в сети</string>
-    <string name="accept_privacy_policy">Я ознакомился и принимаю</string>
-    <string name="privacy_policy">политику конфиденциальности</string>
+    <string name="accept_privacy_text">Я принимаю условия политики конфиденциальности</string>
+    <string name="privacy_policy">политики конфиденциальности</string>
     <string name="privacyPolicy"><u/>Политика конфиденциальности<u/></string>
 </resources>
