--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -166,7 +166,7 @@
     <string name="evalutions">Evalutions</string>
     <string name="online">online</string>
     <string name="was_online">was online</string>
-    <string name="accept_privacy_policy">I have read and accept the</string>
-    <string name="privacy_policy">privacy policy</string>
     <string name="privacyPolicy">Privacy policy</string>
+    <string name="accept_privacy_text">I accept the terms of the privacy policy</string>
+    <string name="privacy_policy">privacy policy</string>
 </resources>
