added file size check before sending

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -173,5 +173,6 @@
     <string name="report">Report</string>
     <string name="complain">Report</string>
     <string name="attachment">Attachment</string>
+    <string name="big_file">The file is too big</string>
 
 </resources>
