--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -168,4 +168,5 @@
     <string name="report">Пожаловаться</string>
     <string name="complain">Жалоба</string>
     <string name="attachment">Вложение</string>
+    <string name="big_file">Файл слишком большой</string>
 </resources>
