fixed: 1. The registration page was not displayed correctly when installing a dark theme in the system. 2. When logging into the application, the page data was not loaded the first time (the launch of the Service Token has been moved to the App class) 3. The menu in the messages went beyond the boundaries of the screen

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,9 +7,9 @@
     <string name="hint_password">Пароль</string>
     <string name="hint_confirm_password">Повторите пароль</string>
     <string name="hint_birthday">Дата рождения</string>
-    <string name="sign_up_button">Зарегестрироваться</string>
+    <string name="sign_up_button">Зарегистрироваться</string>
     <string name="login_button">Войти</string>
-    <string name="question_have_an_account">Уже зарегестрированы?</string>
+    <string name="question_have_an_account">Уже зарегистрированы?</string>
     <string name="login_title">Вход</string>
     <string name="checkbox_remember_me">Запомнить</string>
     <string name="link_forgot_password">Забыли пароль?</string>
