Refactored adapters: replaced view with ViewBinding, improved logic, moved hardcoded values to constants, and made minor fixes

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -169,4 +169,5 @@
     <string name="complain">Жалоба</string>
     <string name="attachment">Вложение</string>
     <string name="big_file">Файл слишком большой</string>
+    <string name="error_when_deleting">Произошла ошибка при удалении</string>
 </resources>
