--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -174,5 +174,5 @@
     <string name="complain">Report</string>
     <string name="attachment">Attachment</string>
     <string name="big_file">The file is too big</string>
-
+    <string name="error_when_deleting">Error when deleting</string>
 </resources>
